Fix mobile menu body styling and adjust overflow behavior for responsiveness

--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -30,10 +30,13 @@
     justify-content: space-between;
     align-items: center;
     flex: 2 1 auto;
-    overflow: auto;
 
     @include respond-between("tablet", "laptop") {
       flex: 2 1 40%;
+    }
+
+    @include respond-to-max("laptop") {
+      overflow: auto;
     }
 
     /* dropdown */
